--- a/L6A/Objects/project.build_log.htm
+++ b/L6A/Objects/project.build_log.htm
@@ -27,96 +27,11 @@ Project File Date:  03/06/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Target 1'
-assembling startup_stm32l476xx.s...
-src/SysTimer.c(44): error: expected expression
-   44 |         SysTick->LOAD = ;
-      |                         ^
-src/SysTimer.c(48): error: expected expression
-   48 |         while();
-      |               ^
-src/SysTimer.c(37): warning: unused parameter 'ms' [-Wunused-parameter]
-   37 | void delay(uint32_t ms) {
-      |                     ^
-src/SysTimer.c(61): error: expected expression
-   61 |         SysTick->LOAD =;
-      |                        ^
-src/SysTimer.c(71): warning: mixing declarations and code is incompatible with standards before C99 [-Wdeclaration-after-statement]
-   71 |         uint32_t val = SysTick->VAL;
-      |                  ^
-src/SysTimer.c(71): warning: unused variable 'val' [-Wunused-variable]
-   71 |         uint32_t val = SysTick->VAL;
-      |                  ^~~
-3 warnings and 3 errors generated.
 compiling SysTimer.c...
-compiling data.c...
-compiling SysClock.c...
-src/LED.c(22): warning: no previous prototype for function 'Green_LED_Off' [-Wmissing-prototypes]
-   22 | void Green_LED_Off(void) {
-      |      ^
-src/LED.c(22): note: declare 'static' if the function is not intended to be used outside of this translation unit
-   22 | void Green_LED_Off(void) {
-      | ^
-      | static 
-src/LED.c(26): warning: no previous prototype for function 'Green_LED_On' [-Wmissing-prototypes]
-   26 | void Green_LED_On(void) {
-      |      ^
-src/LED.c(26): note: declare 'static' if the function is not intended to be used outside of this translation unit
-   26 | void Green_LED_On(void) {
-      | ^
-      | static 
-src/LED.c(30): warning: no previous prototype for function 'Green_LED_Toggle' [-Wmissing-prototypes]
-   30 | void Green_LED_Toggle(void) {
-      |      ^
-src/LED.c(30): note: declare 'static' if the function is not intended to be used outside of this translation unit
-   30 | void Green_LED_Toggle(void) {
-      | ^
-      | static 
-3 warnings generated.
-compiling LED.c...
-src/CRC.c(28): warning: signed shift result (0x80000000) sets the sign bit of the shift expression's type ('int') and becomes negative [-Wshift-sign-overflow]
-   28 |     if(Crc & (1 << 31) == 1){
-      |               ~ ^  ~~
-src/CRC.c(28): warning: & has lower precedence than ==; == will be evaluated first [-Wparentheses]
-   28 |     if(Crc & (1 << 31) == 1){
-      |            ^~~~~~~~~~~~~~~~
-src/CRC.c(28): note: place parentheses around the '==' expression to silence this warning
-   28 |     if(Crc & (1 << 31) == 1){
-      |            ^               
-      |              (             )
-src/CRC.c(28): note: place parentheses around the & expression to evaluate it first
-   28 |     if(Crc & (1 << 31) == 1){
-      |            ^
-      |        (              )
-src/CRC.c(29): warning: code will never be executed [-Wunreachable-code]
-   29 |       Crc = (Crc << 1) ^ POLY;
-      |              ^~~
-3 warnings generated.
-compiling CRC.c...
-src/main.c(34): warning: mixing declarations and code is incompatible with standards before C99 [-Wdeclaration-after-statement]
-   34 |         volatile uint32_t i = 0;
-      |                           ^
-src/main.c(42): warning: unsafe buffer access [-Wunsafe-buffer-usage]
-   42 |                 Software_ComputedCRC = CrcSoftwareFunc(Initial_CRC, DataBuffer[i], POLYNOME);
-      |                                                                     ^~~~~~~~~~
-2 warnings generated.
-compiling main.c...
-src/UART.c(110): warning: comparison of integers of different signs: 'int' and 'uint32_t' (aka 'unsigned int') [-Wsign-compare]
-  110 |         for (i = 0; i < nBytes; i++) {
-      |                     ~ ^ ~~~~~~
-src/UART.c(113): warning: unsafe buffer access [-Wunsafe-buffer-usage]
-  113 |                 USARTx->TDR = buffer[i] & 0xFF;
-      |                               ^~~~~~
-2 warnings generated.
-compiling UART.c...
-src/UART_printf.c(22): warning: unused parameter 'f' [-Wunused-parameter]
-   22 | int fputc(int ch, FILE *f) { 
-      |                         ^
-src/UART_printf.c(31): warning: unused parameter 'f' [-Wunused-parameter]
-   31 | int fgetc(FILE *f) {  
-      |                 ^
-2 warnings generated.
-compiling UART_printf.c...
-".\Objects\project.axf" - 3 Error(s), 15 Warning(s).
+linking...
+Program Size: Code=8812 RO-data=3052 RW-data=4 ZI-data=1732  
+FromELF: creating hex file...
+".\Objects\project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -139,8 +54,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE@5.6.0
-Target not created.
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
