fixed bugs in 6c. SysTimer in 6a and 6b need to be revisited

--- a/L6C/Objects/project.build_log.htm
+++ b/L6C/Objects/project.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  03/08/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Target 1'
-compiling main.c...
+compiling SysTimer.c...
 linking...
-Program Size: Code=9288 RO-data=3040 RW-data=4 ZI-data=1732  
+Program Size: Code=9204 RO-data=3040 RW-data=4 ZI-data=1732  
 FromELF: creating hex file...
 ".\Objects\project.axf" - 0 Error(s), 0 Warning(s).
 
